<resources>
    <string name="app_name">Sleepsense</string>
    <string name="instore_app_name">Sleepsense Instore</string>
    <string name="instore_config_app_name">Sleepsense Config</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                    Mauris el tristique neque. Nulla facilisi. Aenean bibendum at mi ac pretium.
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel tristique neque.</string>
    <string name="sleep_score_breakdown_description">Your Sleep Score delivers a snapshot of your sleep quality and a full report of your sleep patterns and quantity of your sleep.\n\nSet your sleep goal to receive an accurate Sleep Score.</string>
    <string name="sleep_score_breakdown_time_sleeping">Time sleeping</string>
    <string name="sleep_score_breakdown_time_sleeping_txt">A measure of the total number of hours you slept during
        the night. The average adult requires between 7–9 hours sleep. </string>
    <string name="sleep_score_breakdown_time_to_fall_asleep">Time to fall asleep</string>
    <string name="sleep_score_breakdown_time_to_fall_asleep_txt">A measure of the total time it took you to fall to sleep.
        This phase of sleep is known as sleep latency.</string>
    <string name="sleep_score_breakdown_sleep_efficiency">Sleep efficiency</string>
    <string name="sleep_score_breakdown_sleep_efficiency_txt">A measure of the portion of time you were asleep
        versus portion of time you spent lying awake. High sleep efficiency is above 85%.</string>
    <string name="sleep_score_breakdown_restless_sleep">Restless sleep</string>
    <string name="sleep_score_breakdown_restless_sleep_txt">A measure of the total time you were
        restless during your sleep, but not awake.</string>
    <string name="sleep_score_breakdown_awake">Awake</string>
    <string name="sleep_score_breakdown_awake_txt">A measure of the total number of times during
        your sleep that you woke up.</string>
    <string name="sleep_score_breakdown_out_of_bed">Out of bed</string>
    <string name="sleep_score_breakdown_out_of_bed_txt">A measure of the total number of times that you
        broke your sleep entirely and got out of bed.</string>
    <string name="sleep_score_breakdown_snoring">Snoring</string>
    <string name="sleep_score_breakdown_snoring_txt">A measure of the total portion of time you spent snoring while you were asleep. </string>
    <string name="sleep_score_breakdown_resting_heart_rate">Resting heart rate</string>
    <string name="sleep_score_breakdown_resting_heart_rate_txt">A measure of your average heart rate while sleeping.</string>
    <string name="button_continue">Continue</string>
    <string name="button_skip">Skip</string>
    <string name="mattress_firmness_screen_title">Mattress Firmness</string>
    <string name="massage_settings_screen_title">Massage</string>
    <string name="base_position_screen_title">Base Positioning</string>
    <string name="on_boarding_bluetooth_title">Welcome!</string>
    <string name="on_boarding_bluetooth_description">Let\'s find your sleeping devices and get your Sleepsense bed set up</string>
    <string name="on_boarding_bluetooth_button_find_my_devices">Find my devices</string>
    <string name="on_boarding_bluetooth_link_find_out_more">Don\'t have a Sleepsense bed?\nFIND OUT MORE</string>
    <string name="on_boarding_choose_side_description">This will help me adjust to you accurately</string>
    <string name="on_boarding_close_warning">Close Sleepsense before setting up your sleep hardware?</string>
    <string name="preference_dialog_yes">Yes, I\'m sure</string>
    <string name="preference_dialog_message">Are you sure you want to reset Sleepsense? You will not lose your sleep data</string>
    <string name="preferences_sleep_target_time">Sleep target %1$dh %2$dmin</string>
    <string name="sleep_tracking_dialog_message">Are you sure you want to stop sleep tracking?</string>
    <string name="sleep_tracking_dialog_yes">Yes, I\'m done</string>
    <string name="on_boarding_choose_side_heading">Please select the side of the bed you sleep on</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_specified">Not specified</string>
    <string name="age">Age</string>
    <string name="six_week_sleep_challenge">Six week sleep challenge</string>
    <string name="filling_up">I\'m filling up</string>
    <string name="please_wait_a_few_moments">Please wait a few moments longer</string>
    <string name="all_done">All done!</string>
    <string name="onboarding_fill_mattress_success_description">Now you\'re ready to adjust your comfort levels</string>
    <string name="continue_text">Continue</string>
    <string name="onboarding_fill_mattress_error_title">Hmmm</string>
    <string name="onboarding_fill_mattress_error_description">We seem to have difficulties filling your mattress</string>
    <string name="get_help_text">Get help</string>
    <string name="onboarding_searching_success_title">Success</string>
    <string name="onboarding_searching_success_description">This is what I paired with</string>
    <string name="onboarding_searching_error_title">That\'s strange</string>
    <string name="onboarding_searching_error_description">I can\'t seem to pair with everything</string>
    <string name="try_again_text">Try Again</string>
    <string name="help_me_text">Help Me</string>
    <string name="dashboard_empty_sleep_now_description">Simply tap the moon when you are ready to sleep</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="dismiss">Dismiss</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="remember_to_keep_your_phone_charged">Remember to keep your phone\ncharged and next to your bed</string>
    <string name="connecting">Connecting...</string>
    <string name="error_connecting">Error connecting</string>
    <string name="i_cant_seem_to_connect">I can\'t seem to connect, the tracker could be turned off or not in range.</string>
    <string name="try_again">Try again</string>
    <string name="cant_connect_bluetooth_off">I can\'t connect to the tracker. Please turn on bluetooth for sleep tracking to work.</string>
    <string name="turn_on_bluetooth">Turn On Bluetooth</string>
    <string name="title_activity_mattress_size">MattressSize</string>
    <string name="connection_failed_header">Connection failed</string>
    <string name="connection_failed_help_me">Help me</string>
    <string name="connection_failed_try_again">Try again</string>
    <string name="connection_failed_set_up_later">Set up later</string>
    <string name="sleep_on_your_side_header">"Lay on your side \nof the bed"</string>
    <string name="sleep_on_your_side_sub_header">To track your sleep accurately we need \nto connect with the tracker on the side \nof the bed that you sleep on most.</string>
    <string name="set_up_completed_header">"Great you're all set up"</string>
    <string name="set_up_completed_sleep_tracker">Sleep tracker</string>
    <string name="set_up_completed_mattress_pump">Mattress pump</string>
    <string name="set_up_completed_adjustable_base">Adjustable base</string>
    <string name="onboarding_which_side_of_the_pump">Which side of the pump did\nyou plug the air hose into?</string>
    <string name="onboarding_left_side">Left Side</string>
    <string name="onboarding_right_side">Right side</string>
    <string name="content_desc_pump_help_image">Pump Help Image</string>
    <string name="content_desc_setup_not_completed">Setup not completed Help Image</string>
    <string name="onboarding_setup_not_completed">You need to set up at least one device to use the app</string>
    <string name="onboarding_setup_again">Set up again</string>
    <string name="set_up_later">Set up later</string>
    <string name="onboarding_error_title_pump_not_found">Oh no! We couldn\'t find a\nSleepsense pump in the room</string>
    <string name="onboarding_error_desc_pump_not_found">Try double checking that it\'s plugged in</string>
    <string name="contact_us_availability_desc_text">A.H. Beard’s Support team is here to help 8:00AM to 8:00PM EST, Monday through Friday</string>
    <string name="contact_us_find_out_title_text">Find out more about A.H. Beard</string>
    <string name="contact_us_find_out_description_text">100% Australian and New Zealand made mattresses for over 150 years</string>
    <string name="contact_us_availability_title_text">Want to get in touch?</string>
    <string name="dialog_onboarding_complete_title">Congratulations</string>
    <string name="dialog_onboarding_complete_desc">You have set up Sleepsense</string>
</resources>