<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/activity_sleep_on_your_side"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@drawable/background_gradient_new">

<ImageView
    android:id="@+id/sleep_on_your_side_image"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"/>

<TextView
    android:id="@+id/sleep_on_your_side_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginBottom="190dp"
    android:text="@string/sleep_on_your_side_header"
    android:textAlignment="center"
    android:textColor="@color/whiteTextColor"
    android:textSize="@dimen/text_header_font_size"
    android:textStyle="bold" />

<TextView
    android:id="@+id/sleep_on_your_side_sub_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginBottom="120dp"
    android:text="@string/sleep_on_your_side_sub_header"
    android:textAlignment="center"
    android:textColor="@color/whiteTextColor"
    android:textSize="@dimen/text_other_font_size"/>

<Button
    android:id="@+id/button_sleep_on_your_side_continue"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_margin="@dimen/button_margin"
    android:background="@drawable/sleep_sense_button_blue"
    android:padding="@dimen/button_padding"
    android:stateListAnimator="@null"
    android:text="@string/button_continue"
    android:textAllCaps="false"
    android:textColor="@drawable/button_text_color"
    android:textSize="@dimen/button_font_size"
    android:textStyle="bold" />
</FrameLayout>



