<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/activity_setup_completed"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@drawable/background_gradient_new">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:src="@drawable/stars_and_moon"
        android:layout_marginTop="25dp"/>

<TextView
    android:id="@+id/setup_completed_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginBottom="250dp"
    android:text="@string/set_up_completed_header"
    android:textAlignment="center"
    android:textColor="@color/whiteTextColor"
    android:textSize="@dimen/text_header_font_size"
    android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="180dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/activity_setup_completed_sleep_tracker_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:src="@drawable/success_tick"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:layout_toRightOf="@+id/activity_setup_completed_sleep_tracker_image"
            android:layout_margin="@dimen/text_margin"
            android:gravity="left|center"
            android:text="@string/set_up_completed_sleep_tracker"
            android:textSize="@dimen/text_other_font_size"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="130dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/activity_setup_completed_mattress_pump_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:src="@drawable/success_tick"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:layout_toRightOf="@+id/activity_setup_completed_mattress_pump_image"
            android:layout_margin="@dimen/text_margin"
            android:gravity="left|center"
            android:text="@string/set_up_completed_mattress_pump"
            android:textSize="@dimen/text_other_font_size"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/activity_setup_completed_adjustable_base_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:src="@drawable/success_tick"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/activity_setup_completed_adjustable_base_image"
            android:paddingTop="7dp"
            android:layout_margin="@dimen/text_margin"
            android:gravity="left|center"
            android:text="@string/set_up_completed_adjustable_base"
            android:textSize="@dimen/text_other_font_size"/>
    </RelativeLayout>

<Button
    android:id="@+id/button_setup_completed_continue"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_margin="@dimen/button_margin"
    android:background="@drawable/sleep_sense_button_blue"
    android:padding="@dimen/button_padding"
    android:stateListAnimator="@null"
    android:text="@string/button_continue"
    android:textAllCaps="false"
    android:textColor="@drawable/button_text_color"
    android:textSize="@dimen/button_font_size"
    android:textStyle="bold" />
</FrameLayout>

