<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/on_board_complete_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#8000"
    android:clickable="true"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sleep_sense_dialog_background"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/on_board_complete_dialog_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dialog_mattress_happy"/>

        <View android:layout_width="wrap_content" android:layout_height="20dp"/>

        <au.com.ahbeard.sleepsense.widgets.StyledTextView
            android:id="@+id/on_board_complete_dialog_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:textColor="#3C709C"
            app:typeface="OpenSansSemibold"
            android:text="@string/dialog_onboarding_complete_title"/>

        <View android:layout_width="wrap_content" android:layout_height="20dp"/>

        <au.com.ahbeard.sleepsense.widgets.StyledTextView
            android:id="@+id/on_board_complete_dialog_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13.5sp"
            android:textColor="@color/onBoardBodyTextColor"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:lineSpacingExtra="5dp"
            app:typeface="OpenSansRegular"
            android:text="@string/dialog_onboarding_complete_desc"/>

        <View android:layout_width="wrap_content" android:layout_height="20dp"/>

        <au.com.ahbeard.sleepsense.widgets.StyledButton
            android:id="@+id/on_board_complete_dialog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sleep_sense_button_blue"
            android:stateListAnimator="@null"
            android:text="@string/button_continue"
            android:textColor="#fff"/>

    </LinearLayout>

</LinearLayout>